;; This is a library.
(library
  (name kot)
  (public_name kot)
)

;; Warnings are enabled in development builds and disabled in release builds.
;; Assertions are disabled in release builds.
(env
  (dev     (flags :standard -w @A-4-44-32))
  (release (flags :standard -noassert ))
)

;; Request documentation.
(documentation)
